--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": 
+  {
+    "DefaultConnection": "Server=Localhost; port= 5432; database=quotedb; User Id= postgres; password= 12345"
+  }
 }
+
+
+
