--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -12,6 +12,10 @@
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="7.0.4" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+     <PackageReference Include="Microsoft.Extensions.Configuration" />
   </ItemGroup>
 
+
+
+ 
 </Project>
